--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@ h2{
 </head>
 <body>
     <h2>Aperte F12</h2>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index.js"></script>os modulos crim
 </body>
 </html>
